--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
+    "bluebird": "^3.4.6",
     "co": "^4.6.0",
-    "fs-promise": "^0.5.0",
-    "restler": "^3.4.0"
+    "request": "^2.78.0"
   }
 }
